Add FamilySearch logo to navigation

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -43,6 +43,11 @@
             cursor: pointer;
         }
 
+        .tree-logo {
+            height: 24px;
+            width: auto;
+        }
+
         .tree-nav {
             display: flex;
             gap: 24px;
@@ -278,6 +283,7 @@
     <nav class="sub-nav">
         <div class="sub-nav-content">
             <div class="tree-title">
+                <img src="images/family-search-logo.jpg" alt="FamilySearch" class="tree-logo">
                 FamilySearch Tree
                 <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <polyline points="6 9 12 15 18 9"/>
