Align edit button vertically with birth information

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -506,29 +506,31 @@
             </div>
             <div class="modal-body">
                 <div class="modal-left">
-                    <div class="edit-section">
-                        <label class="edit-label">Birth</label>
-                        <div class="edit-value">13 October 1890</div>
-                        <div class="edit-value">Logan, Cache, Utah, United States</div>
-                        <div class="edit-meta">
-                            <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                                <circle cx="9" cy="7" r="4"/>
-                                <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                                <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-                            </svg>
-                            <span>Last Changed: January 8, 2026</span>
-                            <span>Mary Anna Ebert</span>
+                    <div class="edit-section" style="display: flex; justify-content: space-between; align-items: flex-start;">
+                        <div style="flex: 1;">
+                            <label class="edit-label">Birth</label>
+                            <div class="edit-value">13 October 1890</div>
+                            <div class="edit-value">Logan, Cache, Utah, United States</div>
+                            <div class="edit-meta">
+                                <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                                    <circle cx="9" cy="7" r="4"/>
+                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                </svg>
+                                <span>Last Changed: January 8, 2026</span>
+                                <span>Mary Anna Ebert</span>
+                            </div>
+                            <a href="#" class="edit-link">SEE ALL CHANGES</a>
                         </div>
-                        <a href="#" class="edit-link">SEE ALL CHANGES</a>
+                        <a href="#" class="edit-button" style="margin-top: 0;">
+                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+                            </svg>
+                            EDIT
+                        </a>
                     </div>
-                    <a href="#" class="edit-button">
-                        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
-                            <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
-                        </svg>
-                        EDIT
-                    </a>
                 </div>
                 <div class="modal-right">
                     <div class="sources-header">
