--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -494,6 +494,199 @@
             flex-shrink: 0;
             margin-top: 2px;
         }
+
+        /* Edit Form Styles */
+        .edit-form {
+            display: none;
+        }
+
+        .edit-form.active {
+            display: block;
+        }
+
+        .back-btn {
+            background: none;
+            border: none;
+            cursor: pointer;
+            padding: 4px;
+            color: #666;
+            font-size: 24px;
+            display: flex;
+            align-items: center;
+        }
+
+        .back-btn:hover {
+            color: #333;
+        }
+
+        .form-group {
+            margin-bottom: 24px;
+        }
+
+        .form-label {
+            font-size: 14px;
+            font-weight: 600;
+            color: #333;
+            margin-bottom: 8px;
+            display: block;
+        }
+
+        .form-input {
+            width: 100%;
+            padding: 10px 12px;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            font-size: 15px;
+            font-family: inherit;
+            transition: border-color 0.2s;
+        }
+
+        .form-input:focus {
+            outline: none;
+            border-color: #0066c0;
+        }
+
+        .date-input {
+            padding-left: 40px;
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="%23666" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>');
+            background-repeat: no-repeat;
+            background-position: 12px center;
+        }
+
+        .place-input {
+            padding-left: 40px;
+            background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="%23666" stroke-width="2"><path d="M21 10c0 7-9 13-9 13s-9-6-9-13a9 9 0 0 1 18 0z"/><circle cx="12" cy="10" r="3"/></svg>');
+            background-repeat: no-repeat;
+            background-position: 12px center;
+        }
+
+        .standardized-badge {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            color: #2e7d32;
+            font-size: 13px;
+            margin-top: 8px;
+        }
+
+        .standardized-badge svg {
+            width: 16px;
+            height: 16px;
+        }
+
+        .info-link {
+            color: #0066c0;
+            text-decoration: none;
+            font-size: 13px;
+            margin-left: auto;
+        }
+
+        .info-link:hover {
+            text-decoration: underline;
+        }
+
+        .form-textarea {
+            width: 100%;
+            padding: 10px 12px;
+            border: 2px solid #ccc;
+            border-radius: 4px;
+            font-size: 14px;
+            font-family: inherit;
+            resize: vertical;
+            min-height: 100px;
+            transition: border-color 0.2s;
+        }
+
+        .form-textarea:focus {
+            outline: none;
+            border-color: #0066c0;
+        }
+
+        .char-count {
+            text-align: right;
+            font-size: 12px;
+            color: #666;
+            margin-top: 4px;
+        }
+
+        .form-footer {
+            margin-top: 16px;
+            padding-top: 16px;
+        }
+
+        .form-meta {
+            font-size: 12px;
+            color: #666;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            margin-bottom: 12px;
+        }
+
+        .notification-text {
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 16px;
+        }
+
+        .delete-btn {
+            color: #0066c0;
+            text-decoration: none;
+            font-size: 14px;
+            font-weight: 600;
+        }
+
+        .delete-btn:hover {
+            text-decoration: underline;
+        }
+
+        .modal-footer {
+            padding: 16px 24px;
+            border-top: 1px solid #e0e0e0;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            background-color: white;
+        }
+
+        .btn {
+            padding: 10px 24px;
+            border: none;
+            border-radius: 4px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            transition: background-color 0.2s;
+        }
+
+        .btn-cancel {
+            background-color: white;
+            color: #0066c0;
+            border: 1px solid #0066c0;
+        }
+
+        .btn-cancel:hover {
+            background-color: #f0f0f0;
+        }
+
+        .btn-save {
+            background-color: #0066c0;
+            color: white;
+        }
+
+        .btn-save:hover {
+            background-color: #0052a3;
+        }
+
+        .view-content {
+            display: block;
+        }
+
+        .view-content.hidden {
+            display: none;
+        }
     </style>
 </head>
 <body>
@@ -501,35 +694,99 @@
     <div class="modal-overlay" id="birthModal">
         <div class="modal">
             <div class="modal-header">
+                <button class="back-btn" id="backBtn" style="display: none;" onclick="showViewMode()">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <line x1="19" y1="12" x2="5" y2="12"/>
+                        <polyline points="12 19 5 12 12 5"/>
+                    </svg>
+                </button>
                 <h2 class="modal-title">Birth</h2>
                 <button class="close-btn" onclick="closeBirthModal()">&times;</button>
             </div>
             <div class="modal-body">
                 <div class="modal-left">
-                    <div class="edit-section" style="display: flex; justify-content: space-between; align-items: flex-start;">
-                        <div style="flex: 1;">
-                            <label class="edit-label">Birth</label>
-                            <div class="edit-value">13 October 1890</div>
-                            <div class="edit-value">Logan, Cache, Utah, United States</div>
-                            <div class="edit-meta">
-                                <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
-                                    <circle cx="9" cy="7" r="4"/>
-                                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
-                                    <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
-                                </svg>
-                                <span>Last Changed: January 8, 2026</span>
-                                <span>Mary Anna Ebert</span>
+                    <!-- View Mode -->
+                    <div class="view-content" id="viewContent">
+                        <div class="edit-section" style="display: flex; justify-content: space-between; align-items: flex-start;">
+                            <div style="flex: 1;">
+                                <label class="edit-label">Birth</label>
+                                <div class="edit-value">13 October 1890</div>
+                                <div class="edit-value">Logan, Cache, Utah, United States</div>
+                                <div class="edit-meta">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                                        <circle cx="9" cy="7" r="4"/>
+                                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                    </svg>
+                                    <span>Last Changed: January 8, 2026</span>
+                                    <span>Mary Anna Ebert</span>
+                                </div>
+                                <a href="#" class="edit-link">SEE ALL CHANGES</a>
                             </div>
-                            <a href="#" class="edit-link">SEE ALL CHANGES</a>
+                            <a href="#" class="edit-button" style="margin-top: 0;" onclick="showEditMode(event)">
+                                <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                    <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
+                                    <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
+                                </svg>
+                                EDIT
+                            </a>
                         </div>
-                        <a href="#" class="edit-button" style="margin-top: 0;">
-                            <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                                <path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"/>
-                                <path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"/>
-                            </svg>
-                            EDIT
-                        </a>
+                    </div>
+
+                    <!-- Edit Mode -->
+                    <div class="edit-form" id="editForm">
+                        <form>
+                            <div class="form-group">
+                                <label class="form-label">Date of Birth</label>
+                                <input type="text" class="form-input date-input" value="13 October 1910">
+                                <div class="standardized-badge" style="display: flex; align-items: center; justify-content: space-between;">
+                                    <span style="display: flex; align-items: center; gap: 6px;">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 16px; height: 16px;">
+                                            <polyline points="20 6 9 17 4 12"/>
+                                        </svg>
+                                        Standardized Date
+                                    </span>
+                                    <a href="#" class="info-link">What's this?</a>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="form-label">Birthplace</label>
+                                <input type="text" class="form-input place-input" value="Logan, Cache, Utah, United States">
+                                <div class="standardized-badge" style="display: flex; align-items: center; justify-content: space-between;">
+                                    <span style="display: flex; align-items: center; gap: 6px;">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 16px; height: 16px;">
+                                            <polyline points="20 6 9 17 4 12"/>
+                                        </svg>
+                                        Standardized Place
+                                    </span>
+                                    <a href="#" class="info-link">What's this?</a>
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="form-label">Reason This Information Is Correct</label>
+                                <textarea class="form-textarea"></textarea>
+                                <div class="char-count">2,000</div>
+                            </div>
+
+                            <div class="form-footer">
+                                <div class="form-meta">
+                                    <svg class="meta-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                                        <circle cx="9" cy="7" r="4"/>
+                                        <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                                        <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                                    </svg>
+                                    <span>Last Changed: January 8, 2026</span>
+                                    <span>Mary Anna Ebert</span>
+                                </div>
+                                <a href="#" class="edit-link">SEE ALL CHANGES</a>
+                                <p class="notification-text">People following this person will be notified of your change.</p>
+                                <a href="#" class="delete-btn">DELETE BIRTH</a>
+                            </div>
+                        </form>
                     </div>
                 </div>
                 <div class="modal-right">
@@ -821,6 +1078,13 @@
                     </div>
                 </div>
             </div>
+            <div class="modal-footer" id="modalFooter" style="display: none;">
+                <a href="#" class="delete-btn" style="margin-right: auto;">DELETE BIRTH</a>
+                <div style="display: flex; gap: 12px;">
+                    <button class="btn btn-cancel" onclick="showViewMode()">CANCEL</button>
+                    <button class="btn btn-save">SAVE</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -828,11 +1092,28 @@
         function openBirthModal() {
             document.getElementById('birthModal').classList.add('active');
             document.body.style.overflow = 'hidden';
+            showViewMode();
         }
 
         function closeBirthModal() {
             document.getElementById('birthModal').classList.remove('active');
             document.body.style.overflow = 'auto';
+            showViewMode();
+        }
+
+        function showEditMode(event) {
+            if (event) event.preventDefault();
+            document.getElementById('viewContent').classList.add('hidden');
+            document.getElementById('editForm').classList.add('active');
+            document.getElementById('backBtn').style.display = 'block';
+            document.getElementById('modalFooter').style.display = 'flex';
+        }
+
+        function showViewMode() {
+            document.getElementById('viewContent').classList.remove('hidden');
+            document.getElementById('editForm').classList.remove('active');
+            document.getElementById('backBtn').style.display = 'none';
+            document.getElementById('modalFooter').style.display = 'none';
         }
 
         // Close modal when clicking outside
