Remove DELETE BIRTH button from modal footer, keep CANCEL and SAVE

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -1079,8 +1079,7 @@
                 </div>
             </div>
             <div class="modal-footer" id="modalFooter" style="display: none;">
-                <a href="#" class="delete-btn" style="margin-right: auto;">DELETE BIRTH</a>
-                <div style="display: flex; gap: 12px;">
+                <div style="display: flex; gap: 12px; margin-left: auto;">
                     <button class="btn btn-cancel" onclick="showViewMode()">CANCEL</button>
                     <button class="btn btn-save">SAVE</button>
                 </div>
