--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -301,7 +301,6 @@
             width: 90%;
             max-width: 900px;
             max-height: 90vh;
-            overflow: hidden;
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
             display: flex;
             flex-direction: column;
@@ -339,6 +338,7 @@
             display: flex;
             flex: 1;
             overflow: hidden;
+            min-height: 0;
         }
 
         .modal-left {
