Change 'Data Items in Conflict' to 'Conflicts' in warning modal

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -861,7 +861,7 @@
                 </p>
                 
                 <div class="conflict-section">
-                    <h3 class="conflict-title">Data Items in Conflict</h3>
+                    <h3 class="conflict-title">Conflicts</h3>
                     
                     <div class="conflict-item">
                         <svg class="conflict-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
