Remove line break in warning description, let text wrap naturally

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -856,8 +856,7 @@
             </div>
             <div class="warning-body">
                 <p class="warning-description">
-                    This happens when information conflicts with existing sources.<br>
-                    You can still save if you're confident this information is correct.
+                    This happens when information conflicts with existing sources. You can still save if you're confident this information is correct.
                 </p>
                 
                 <div class="conflict-section">
