--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -860,7 +860,7 @@
                 </p>
                 
                 <div class="conflict-section">
-                    <h3 class="conflict-title">Conflicts</h3>
+                    <h3 class="conflict-title">Conflicts (2)</h3>
                     
                     <div class="conflict-item">
                         <svg class="conflict-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
