Update warning description text to be more direct

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -856,7 +856,7 @@
             </div>
             <div class="warning-body">
                 <p class="warning-description">
-                    This happens when information conflicts with existing sources. You can still save if you're confident this information is correct.
+                    The information you just entered conflicts with existing sources. You can still save if you're confident it's correct.
                 </p>
                 
                 <div class="conflict-section">
