Update warning modal heading and description text

--- a/Tree Web/edit_warning_feedback.html
+++ b/Tree Web/edit_warning_feedback.html
@@ -857,12 +857,12 @@
     <div class="warning-overlay" id="warningModal">
         <div class="warning-modal">
             <div class="warning-header">
-                <h2 class="warning-title">Change will lower Cleo's quality score</h2>
+                <h2 class="warning-title">This change will lower Cleo's quality score</h2>
                 <button class="close-btn" onclick="closeWarningModal()">&times;</button>
             </div>
             <div class="warning-body">
                 <p class="warning-description">
-                    The information you just entered conflicts with existing sources. You can still save if you're confident it's correct.
+                    It conflicts with existing information or sources. You can save the change if you're confident it's correct.
                 </p>
                 
                 <div class="conflict-section">
